# clang-format

./: CMakeLists.txt  ClangFormat.cpp  ClangFormat.h  ClangFormat.i  Dockerfile  README.md  main.cpp
